2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2002-12-08	Greg Menke <gregory.menke@gsfc.nasa.gov>
  
	* bootloader/head.S: Added support for optional debug via PPCbug.
	Also turn off mmu/caches for the bootstrap phase, which seems to
	cause trouble with the 603.  The cpu init functions in the bsp
	get all that stuff going properly.

2002-12-19	Joel Sherrill <joel@OARcorp.com>

	* console/console.c: Removed __assert() which conflicts with newlib.

2002-11-17	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* irq/irq_init.c, motorola/motorola.c: Support for MTX603e.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* bootloader/em86.c, console/inch.c, console/polled_io.c, irq/irq.c,
	motorola/motorola.c, pci/detect_raven_bridge.c,
	vectors/vectors_init.c: Removed warnings.

2002-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootloader/em86real.S: Fix syntax error in comment near line 1185.

2001-05-14	Till Straumann <strauman@slac.stanford.edu>

	* bootloader/misc.c, console/Makefile.am, console/console.c,
	console/consoleIo.h, console/inch.c, console/polled_io.c,
	console/uart.c, console/uart.h, include/bsp.h, irq/Makefile.am,
	irq/irq.c, irq/irq.h, irq/irq_init.c, openpic/openpic.c,
	openpic/openpic.h, pci/Makefile.am, pci/pci.c, pci/pci.h,
	residual/Makefile.am, start/start.S, startup/bspstart.c,
	vectors/vectors.S, vectors/vectors.h, vectors/vectors_init.c:
	Per PR216, "libbsp/powerpc/shared" BSP has been modified considerably
	with the goal to make it more flexible and reusable by other
	BSPs. The main strategies were:
	    - eliminate hardcoded base addresses; devices use offsets
	      and a BSP defined base address.
	    - separate functionality into different files (e.g. reboot from
	      inch.c to reboot.c) which can be overridden by a 'derived' BSP.
	    - separate initialization code into separate files (e.g.  PCI
	      bridge detection/initialization was separated from the more