@@ -5,7 +5,7 @@
 
 if need_shared
 SUBDIRS = clock console include pci residual openpic irq vectors start \
-    startup motorola bootloader
+    startup motorola bootloader vme
 endif
 
 include $(top_srcdir)/../../../../../automake/subdirs.am
