@@ -3,10 +3,10 @@
 ##
 
 
-C_FILES = bspstart.c
+C_FILES = bspstart.c pgtbl_setup.c pgtbl_activate.c 
 
 noinst_DATA = linkcmds
 
-EXTRA_DIST = bspstart.c linkcmds
+EXTRA_DIST = bspstart.c linkcmds  pgtbl_setup.c pgtbl_activate.c 
 
 include $(top_srcdir)/../../../../../automake/local.am
